src/objects/Feature__c.object
<CustomObject>
    <fields>
        <fullName>ATM_Fee_in_other_currencies__c</fullName>
        <label>ATM Fee in other currencies</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Card_Replacement_Cost__c</fullName>
        <label>Card Replacement Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_Calendar_Month__c</fullName>
        <label>Cost per Calendar Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <label>Home Country</label>
        <referenceTo>Home_Country__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Feature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Home_Country__c</columns>
        <columns>Product__c</columns>
        <columns>ATM_Fee_in_other_currencies__c</columns>
        <columns>Card_Replacement_Cost__c</columns>
        <columns>Cost_per_Calendar_Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>